--- a/Lab5/src/app/app.component.html
+++ b/Lab5/src/app/app.component.html
@@ -1,4 +1,8 @@
-<div *ngFor="let category of categories" (click)="selectCategory(category)">
-  <a href="#"> {{ category.name }} </a>
+<div class="container">
+  <div class="category-container">
+    <div class="category-item" *ngFor="let category of categories" (click)="selectCategory(category)">
+      {{ category.name }}
+    </div>
+  </div>
+  <app-product-list class="product-list-container" *ngIf="selectedCategory" [category]="selectedCategory"></app-product-list>
 </div>
-<app-product-list *ngIf="selectedCategory" [category]="selectedCategory"></app-product-list>
