--- a/Lab5/src/app/product-item/product-item.component.html
+++ b/Lab5/src/app/product-item/product-item.component.html
@@ -1,8 +1,8 @@
-<div>
-  <p>
-    <span>{{ product.name }}</span>
-    <span>{{ product.likes }}</span>
-  </p>
-  <button (click)="like(product.id)">Like</button>
-  <button (click)="remove(product.id)">Remove</button>
+<div class="product-item-container">
+  <p>{{ product.name }}</p>
+  <p>Likes: {{ product.likes }}</p>
+  <div class="button-group">
+    <button (click)="like(product.id)">Like</button>
+    <button (click)="remove(product.id)">Remove</button>
+  </div>
 </div>
